// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clear - should clear the object 1`] = `
Object {
  "john": "doe",
}
`;

exports[`clear - should return an empty object 1`] = `Object {}`;

exports[`concat - should concat 1`] = `
Object {
  "jane": "doe",
  "john": "doe",
}
`;

exports[`concat - should deep concat 1`] = `
Object {
  "me": Object {
    "john": "doe",
  },
  "wife": Object {
    "jane": "doe",
  },
}
`;

exports[`concat - should deep override 1`] = `
Object {
  "me": Object {
    "john": "doe awesome",
  },
}
`;

exports[`concat - should override 1`] = `
Object {
  "john": "doe awesome",
}
`;

exports[`concat - should return an empty object 1`] = `Object {}`;

exports[`concat - should return objectOne 1`] = `
Object {
  "john": "doe",
}
`;

exports[`concat - should return objectTwo 1`] = `
Object {
  "jane": "doe",
}
`;

exports[`isEmpty - should return false if filled 1`] = `false`;

exports[`isEmpty - should return true if empty 1`] = `true`;

exports[`isEmpty - should return true if null 1`] = `true`;

exports[`isEmpty - should return true if undefined 1`] = `true`;
